5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4129/executions/1758_2390.log
== SUBMITION (2019-05-29 13:05:38) 
-- CODE:
from numpy import*
i=0=array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=pm-fm
while i!=size(pm):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1
-- EXECUTION TIME:
0.154823
-- ERROR:
  File "/home/codebench/codes/1758/2390/main.py", line 2
    i=0=array(eval(input()))
     ^
SyntaxError: can't assign to literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:00) 
-- CODE:
from numpy import*
i=0
 a =array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=a-fm
while i!=size(a):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1
-- ERROR:
File "XXXX", line 3
    a =array(eval(input()))
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 13:06:08) 
-- CODE:
from numpy import*
i=0
a = array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=a-fm
while i!=size(a):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 13:06:11) 
-- CODE:
from numpy import*
i=0
a = array(eval(input("insira a quantidade de alunos por mes: ")))
fm=array(eval(input("insira a quantidade de alunos faltosos por mes: ")))
rm=a-fm
while i!=size(a):
	if rm[i]==max(rm):
		print(i+1)
	i=i+1
-- EXECUTION TIME:
0.55937
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
